
- Fixed issue #9999: idProperty missing in definition file causes unclear
  error messages.
- Fixed testcase for manual generator giving failure for postgresql on correct
  behaviour (INSERT violating NULL contraint does give an error...)
- Fixed issue #010153: Persistent Object and manual generator (negative and 
  0 primary keys)
	
	
1.2 - Monday 18 December 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #9249: Save/update objects with 1:1 relations that share the
  same ID does not work.
- Fixed issue #9489: Check whether the PersistentObject and
  PersistentObjectDatabaseSchemaTiein tutorials are interlinked.
- Fixed issue #9493: Convert < and > in exception messages to ' and ' for
  Cache, ConsoleTools, ImageAnalysis, ImageConversion, PersistentObject,
  PersistentObjectDatabaseSchemaTiein.
- Fixed issue #9591: ezcPersistentSession attempts to throw non existing
  exception (typo).
- Fixed issue #9819: Let all components deal with the ezcBaseAutoloadException
  properly.


1.2beta2 - Monday 20 November 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #8962: "Sequence Generator" incorrect name for MySQL. MySQL
  should use the new "ezcPersistentNativeGenerator" from now, with
  auto_increment. "ezcPersistentSequenceGenerator" dispatches to this for BC
  reasons.
- Fixed issue #9248: SQLite driver throws wierd exception.
- Fixed issue #9335: PersistentSession should use object->getState() in all
  methods rather than accessing objects properties directly.


1.2beta1 - Tuesday 24 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8340: Column names are not escaped.
- Fixed bug #8489: Show the absolute path in the "cannot find definition file"
  exception message.
- Fixed bug #8511: @access private for the 'id generator' classes.
- Fixed bug #8663: Undeclared property "type" used instead of "propertyType"