@@ -2,9 +2,8 @@
 ezcTestRunner::addFileToFilter( __FILE__ );
 
 /*
- * Holds the definition for PersistentTestObject
- * This definition is used by the code manager for
- * various tests in the system.
+ * Holds the definition for Table
+ * This definition is used by the keywords test.
  */
 // build definition
 $def = new ezcPersistentObjectDefinition();
@@ -25,6 +24,27 @@ $def->properties['select']->propertyType = ezcPersistentObjectProperty::PHP_TYPE
 $def->properties['select']->defaultValue = 0;
 $def->properties['select']->visibility = ezcPersistentObjectProperty::VISIBILITY_PRIVATE;
 $def->properties['select']->isRequired = false;
+
+$def->relations["Where"] = new ezcPersistentOneToManyRelation(
+     "table",
+     "where"
+);
+$def->relations["Where"]->columnMap = array(
+     new ezcPersistentSingleTableMap(
+         "from",
+         "update"
+     ),
+ );
+
+$def->relations["Like"] = new ezcPersistentManyToManyRelation(
+     "table",
+     "where",
+     "as"
+);
+
+$def->relations["Like"]->columnMap = array(
+    new ezcPersistentDoubleTableMap( "from", "and", "or", "like" ),
+);
 
 return $def;
 
